Updated packages to try resolve performance bug, jest test fail to random errors from spectral library

--- a/package.json
+++ b/package.json
@@ -10,48 +10,51 @@
     "link": "npm install -g",
     "unlink": "npm uninstall -g",
     "test": "jest test/",
+    "test2": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand test/",
     "jest": "jest",
     "test-validators": "jest test/plugins",
     "test-cli-tool": "jest test/cli-validator/tests",
+    "test-cli-tool2": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand test/cli-validator/tests",
     "test-travis": "jest --silent --runInBand --no-colors --testNamePattern='^((?!@skip-ci).)*$' test/",
     "lint": "eslint --cache --quiet --ext '.js' src test",
     "fix": "eslint --fix --ext '.js' src test",
     "pkg": "./node_modules/.bin/pkg --out-path=./bin ./package.json; cd bin; rename -f 's/ibm-openapi-validator-(linux|macos|win)/lint-openapi-$1/g' ./ibm-openapi-*"
   },
   "dependencies": {
-    "@stoplight/spectral": "^5.9.2",
-    "chalk": "^4.1.1",
-    "commander": "^2.20.3",
-    "deepmerge": "^2.2.1",
-    "find-up": "^3.0.0",
+    "@stoplight/spectral": "^6.1.0",
+    "chalk": "^4.1.2",
+    "commander": "^8.3.0",
+    "deepmerge": "^4.2.2",
+    "find-up": "^5.0.0",
     "globby": "^11.0.4",
-    "js-yaml": "^3.14.1",
+    "js-yaml": "^4.1.0",
     "json-dup-key-validator": "^1.0.3",
-    "json-schema-ref-parser": "^5.1.3",
+    "json-schema-ref-parser": "^9.0.9",
     "jsonschema": "^1.4.0",
     "lodash": "^4.17.21",
-    "matcher": "^1.1.1",
-    "pad": "^2.3.0",
+    "matcher": "^4.0.0",
+    "pad": "^3.2.0",
     "require-all": "^3.0.0",
-    "semver": "^5.7.1",
-    "update-notifier": "^4.1.3",
-    "validator": "^13.6.0",
-    "yaml-js": "^0.2.3"
+    "semver": "^7.3.5",
+    "update-notifier": "^5.1.0",
+    "validator": "^13.7.0",
+    "yaml-js": "^0.3.1"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "babel-eslint": "^10.1.0",
-    "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^3.6.0",
-    "eslint-plugin-prettier": "^2.7.0",
-    "jest": "^26.6.3",
+    "@babel/eslint-parser": "^7.16.5",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@stoplight/spectral-ruleset-bundler": "^1.0.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.5",
     "npm-force-resolutions": "0.0.10",
-    "pkg": "^4.5.1",
-    "prettier": "^1.19.1",
-    "semantic-release": "^17.4.2",
-    "strip-ansi": "^4.0.0"
+    "pkg": "^5.5.1",
+    "prettier": "^2.5.1",
+    "semantic-release": "^18.0.1",
+    "strip-ansi": "^6.0.1"
   },
   "bin": {
     "lint-openapi": "src/cli-validator/index.js"
